Limit calculation of pre loop during super word optimization is wrong

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b96
    • generic
    • generic

      gunter.haug@sap.com reported the following problem:

      The variable "MemNode* best_align_to_mem_ref" is hidden by a second declaration of a variable with the same name in an inner block of the function "SuperWord::find_adjacent_refs()". This leads to unaligned accesses in generated code. While many platforms handle these correctly (slower, though), Itanium and potentially other platforms which don't allow unaligned access will crash.

            Assignee:
            Volker Simonis
            Reporter:
            Volker Simonis
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: