8141624: Limit calculation of pre loop during super word optimization is wrong

Reviewed-by: vlivanov, kvn